--- a/basic_debain8_conf.yml
+++ b/basic_debain8_conf.yml
@@ -1,10 +1,12 @@
+#################on commandline####################
 #as user
 ansible -m shell -a 'free -m' [HOSTGRUPPE]
 #change to root
 ansible --su --su-user=root --ask-su-pass -m shell -a 'free -m' [HOSTGRUPPE]
+#nach sudo passwort für skript fragen wenn become_method
+ansible-playbook playbook1.yml --ask-become-pass
 
-
-###runbook with user escallation
+###############################################
 ---
 - hosts: [HOSTGRUPPE]
   user: [USER]
@@ -13,22 +15,6 @@ ansible --su --su-user=root --ask-su-pass -m shell -a 'free -m' [HOSTGRUPPE]
   become_method: sudo
   tasks:
     - shell: free -m
-#für output der shell eingabe (geht auch beim aufruf des skript mit -vv)
-#      register: ps
-#    - debug: var=ps.stdout_lines
-###
-#nach sudo passwort für skript oben fragen
-ansible-playbook playbook1.yml --ask-become-pass
-
-https://github.com/MrJuliuss/debian-playbooks
----- untested
----
-- hosts: [HOSTGRUPPE]
-  user: [USER]
-  become: yes
-  become_user: root
-  become_method: su
-  tasks:
 
 - name: Upgrade distribution
   apt: update_cache=yes upgrade=yes cache_valid_time=1800
@@ -39,6 +25,8 @@ https://github.com/MrJuliuss/debian-playbooks
     - vim
     - fail2ban
     - ntp
+    - unattended-upgrades
+    - apt-listchanges
 
 - name: Restart ntp client
   action: service name=ntp state=restarted enabled=yes
