--- a/ansible.cfg
+++ b/ansible.cfg
@@ -81,7 +81,8 @@
 #sudo_flags = -H -S -n
 
 # SSH timeout
-#timeout = 10
+#high timeout for onion network
+timeout = 60
 
 # default user to use for playbooks if user is not specified
 # (/usr/bin/ansible will use current user as default)
@@ -315,6 +316,8 @@
 #   * True = use scp only
 #   * False = use sftp only
 #scp_if_ssh = smart
+#onion network only supports scp
+scp_if_ssh = True
 
 # if False, sftp will not use batch mode to transfer files. This may cause some
 # types of file transfer failures impossible to catch however, and should
