running base config

--- a/nginx.yml
+++ b/nginx.yml
@@ -1,11 +1,8 @@
 ---
-- hosts: testservers
+- hosts: nginx
   become: yes
   become_user: root
   become_method: su
   become_flags: '-s /bin/sh'
   roles:
-#    - sysconfig
-#    - ssh
-#    - nginx
     - nginx_reverseproxy
