--- a/roles/raspi_user_ansible/vars/password.yml
+++ b/roles/raspi_user_ansible/vars/password.yml
@@ -1,3 +1,4 @@
 ---
 #generated with: openssl passwd -1 --salt mchasfce
-password: '$1$mchasfce$89l7o1k4nP0oNHwPQQGDP1'
+ansible_pass: '$1$mchasfce$89l7o1k4nP0oNHwPQQGDP1'
+root_pass: '$1$mchasfce$89l7o1k4nP0oNHwPQQGDP1'
