--- a/002-user-default.yml
+++ b/002-user-default.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: raspberrypi
+- hosts: debian
   vars:
   - ansible_become_pass: "{{ sudo_pass }}"
   vars_prompt:
@@ -11,4 +11,4 @@
   become_user: root
   become_method: su
   roles:
-    - ssh
+    - user-default
