--- a/roles/user-default/tasks/main.yml
+++ b/roles/user-default/tasks/main.yml
@@ -4,9 +4,10 @@
     file: user.yml
     name: user
 
-- name: Get user
+- name: Get old user
   shell: 'id -nu 1000'
   register: user_old
+  changed_when: false
 
 #- name: debug
 #  debug:
@@ -16,16 +17,19 @@
   command: ls /home/"{{ user_old.stdout }}"
   register: home_available
   ignore_errors: true
+  changed_when: false
 
 - name: Check user
   command: grep "{{ user_old.stdout }}" /etc/passwd
   register: user_available
   ignore_errors: true
+  changed_when: false
 
 - name: Check group
   command: grep "{{ user_old.stdout }}" /etc/group
   register: group_available
   ignore_errors: true
+  changed_when: false
 
 - name: Change home for {{ user['username'] }}
   user:
@@ -33,15 +37,16 @@
     group: "{{ user_old.stdout }}"
     home: "/home/{{ user['username'] }}"
     move_home: yes
-  when: home_available is succeeded
+#  when: home_available is succeeded
+  when: (user_old.stdout != user['username'])
 
 - name: Change user to {{ user['username'] }}
   shell: usermod --login {{ user['username'] }} {{ user_old.stdout }}
-  when: user_available is succeeded
+  when: (user_old.stdout != user['username'])
 
 - name: Change group to {{ user['username'] }}
   shell: groupmod --new-name {{ user['username'] }} {{ user_old.stdout }}
-  when: group_available is succeeded
+  when: (user_old.stdout != user['username'])
 
 - name: Set authorized key took from file
   authorized_key:
