--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -23,10 +23,6 @@
 #    var: hostvars[inventory_hostname]
 #    verbosity: 4
 
-#  shell: 'lsb_release -cs'
-#  register: deb_rel
-#  changed_when: false
-
 - name: Add Docker Repo
   template:
     src: docker.list.j2
@@ -37,10 +33,18 @@
     backup: yes
   tags: docker
 
-#  shell: echo "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable" > /etc/apt/sources.list.d/docker.list
-
 - name: Reload Repos
   apt:
     name: ['docker-ce', 'docker-ce-cli', 'containerd.io']
     state: latest
     update_cache: yes
+
+- name: Create Dir
+  file:
+    path: /docker
+    state: directory
+    mode: 0700
+#docker node ls|echo $?##if 1 still no swarm node if 0 swarm node
+#- name: Create Docker Swarm##TODO run oly once
+#  shell: docker swarm init
+#  changed_when: false
