--- a/hosts-debian-install.yml
+++ b/hosts-debian-install.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: debian-install
+- hosts: firstinstall
   vars:
   - ansible_ssh_user: "{{ ssh_user }}"
   - ansible_ssh_pass: "{{ ssh_pass }}"
