--- a/ansible.cfg
+++ b/ansible.cfg
@@ -100,7 +100,7 @@
 #sudo_flags = -H -S -n
 
 # SSH timeout
-#timeout = 10
+timeout = 60
 
 # default user to use for playbooks if user is not specified
 # (/usr/bin/ansible will use current user as default)
