--- a/hosts-debian-docker-nginx.yml
+++ b/hosts-debian-docker-nginx.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: debian-docker-nginx
+- hosts: debian_docker_nginx
   vars:
   - ansible_become_pass: "{{ sudo_pass }}"
   vars_prompt:
