--- a/hosts-debian.yml
+++ b/hosts-debian.yml
@@ -11,8 +11,8 @@
   become_user: root
   become_method: su
   roles:
-    - user-default
-    - ssh
+#    - user-default
+#    - ssh
     - unattended-upgrades
     - sysconfig
     - docker
