--- a/hosts-debian-docker-teamspeak.yml
+++ b/hosts-debian-docker-teamspeak.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: debian-docker-teamspeak
+- hosts: debian_docker_teamspeak
   vars:
   - ansible_become_pass: "{{ sudo_pass }}"
   vars_prompt:
