--- a/roles/user-default/tasks/main.yml
+++ b/roles/user-default/tasks/main.yml
@@ -1,8 +1,6 @@
 ---
-- name: load vars
-  include_vars:
-    file: user.yml
-    name: user
+
+#checks
 
 - name: Get old user
   shell: 'id -nu 1000'
@@ -13,42 +11,48 @@
 #  debug:
 #    msg: "User: {{ user_old.stdout }}"
 
-- name: Check home
+- name: Get home
   command: ls /home/"{{ user_old.stdout }}"
   register: home_available
   ignore_errors: true
   changed_when: false
 
-- name: Check user
+- name: Get user
   command: grep "{{ user_old.stdout }}" /etc/passwd
   register: user_available
   ignore_errors: true
   changed_when: false
 
-- name: Check group
+- name: Get group
   command: grep "{{ user_old.stdout }}" /etc/group
   register: group_available
   ignore_errors: true
   changed_when: false
 
-- name: Change home for {{ user['username'] }}
+#actions
+
+- name: Get variables
+  include_vars:
+    file: user.yml
+    name: user
+
+- name: Mod user home for {{ user['username'] }}
   user:
     name: "{{ user_old.stdout }}"
     group: "{{ user_old.stdout }}"
     home: "/home/{{ user['username'] }}"
     move_home: yes
-#  when: home_available is succeeded
   when: (user_old.stdout != user['username'])
 
-- name: Change user to {{ user['username'] }}
+- name: Mod user name for {{ user['username'] }}
   shell: usermod --login {{ user['username'] }} {{ user_old.stdout }}
   when: (user_old.stdout != user['username'])
 
-- name: Change group to {{ user['username'] }}
+- name: Mod user group for {{ user['username'] }}
   shell: groupmod --new-name {{ user['username'] }} {{ user_old.stdout }}
   when: (user_old.stdout != user['username'])
 
-- name: Set authorized key took from file
+- name: Set authorized key
   authorized_key:
     user: "{{ user['username'] }}"
     state: present
