--- a/roles/tor/tasks/main.yml
+++ b/roles/tor/tasks/main.yml
@@ -1,18 +1,18 @@
 ---
 - name: Install packages
-  apt:
+  package:
     name: ['tor']
     state: latest
 
-- name: Create directory
+- name: Put directory
   file:
     path: /var/lib/tor/hidden_service
     state: directory
     owner: debian-tor
     group: debian-tor
     mode: 0700
-    
-- name: Modify tor-Config
+
+- name: Mod tor config
   template:
     src: torrc.j2
     dest: /etc/tor/torrc
@@ -21,11 +21,11 @@
     - restart tor
   tags: tor
 
-- name: be sure tor is running and enabled
+- name: Start and enable
   service:
     name: tor
     state: started
     enabled: yes
   tags: tor
 
-##TODO permissions on /var/lib/tor; iptables -A OUTPUT -j ACCEPT -m owner --uid-owner debian-tor
+##TODO iptables -A OUTPUT -j ACCEPT -m owner --uid-owner debian-tor
