--- a/hosts-debian.yml
+++ b/hosts-debian.yml
@@ -11,8 +11,9 @@
   become_user: root
   become_method: su
   roles:
+#    - user-ansible
 #    - user-default
 #    - ssh
-#    - sysconfig
+    - sysconfig
+#    - tor
 #    - docker
-    - tor
