privatekey for ansible

--- a/hosts-debian.yml
+++ b/hosts-debian.yml
@@ -11,9 +11,9 @@
   become_user: root
   become_method: su
   roles:
-#    - user-ansible
-#    - user-default
-#    - ssh
+    - user-ansible
+    - user-default
+    - ssh
     - sysconfig
-#    - tor
+    - tor
 #    - docker
