--- a/roles/sysconfig/tasks/main.yml
+++ b/roles/sysconfig/tasks/main.yml
@@ -30,9 +30,9 @@
     mode: '0644'
     backup: yes
 
-- name: Firststart ufw
+#- name: Firststart ufw
   #temp samba
-  shell: ufw allow ssh; ufw allow ntp; ufw allow samba; ufw enable
+#  shell: ufw allow ssh; ufw allow ntp; ufw allow samba; ufw enable
 
 - name: Start and enable
   service:
