complete samba deploy

--- a/group_vars/knaben.yml
+++ b/group_vars/knaben.yml
@@ -1,2 +1,4 @@
 ---
 samba_user: 'rslsync'
+#samba_hash output from previous samba server with "pdbedit -L -w"
+samba_hash: 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX:400849FE332EDB779757D843CF6F919F:[U          ]:LCT-59441736:'
