--- a/ansible.cfg
+++ b/ansible.cfg
@@ -104,7 +104,7 @@ timeout = 60
 
 # default user to use for playbooks if user is not specified
 # (/usr/bin/ansible will use current user as default)
-#remote_user = root
+remote_user = ansible
 
 # logging is off by default unless this path is defined
 # if so defined, consider logrotate
