--- a/playbook-raspbian.yml
+++ b/playbook-raspbian.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: gemmern
+- hosts: raspbian
   vars:
   - ansible_become_pass: "{{ sudo_pass }}"
   vars_prompt:
@@ -11,4 +11,10 @@
   become_user: root
   become_method: su
   roles:
+    - user-ansible
+    - user-default
+    - ssh
+    - sysconfig
+    - tor
+    - resilio-sync
     - samba
