--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -4,26 +4,17 @@
     name: ['apt-transport-https', 'ca-certificates', 'software-properties-common']
     state: latest
 
+- name: Create repo
+  apt_repository:
+    repo: "deb https://download.docker.com/linux/debian {{ ansible_distribution_release }} stable"
+    state: present
+    filename: docker
+    update_cache: yes
+
 - name: Add docker repo key
   apt_key:
     url: https://download.docker.com/linux/debian/gpg
     state: present
-
-#- name: Display all variables/facts known for a host
-#  debug:
-#    var: hostvars[inventory_hostname]
-#    verbosity: 4
-
-- name: Set repo
-  #needs gather_facts: true
-  template:
-    src: docker.list.j2
-    dest: /etc/apt/sources.list.d/docker.list
-    owner: root
-    group: root
-    mode: '0644'
-    backup: yes
-  tags: docker
 
 - name: Install packages
   #currently 2018-07-07 not working package error
