--- a/roles/kubernetes-master/tasks/main.yml
+++ b/roles/kubernetes-master/tasks/main.yml
@@ -1,17 +1,17 @@
 ---
-- name: Create kubernetes repo
+- name: Create repo
   apt_repository:
-    repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
+    repo: "deb http://apt.kubernetes.io/ kubernetes-xenial main"
     state: present
     filename: kubernetes
     update_cache: yes
 
-- name: Add kubernetes key
+- name: Add repo key
   apt_key:
     url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
     state: present
 
-- name: install kubernetes
+- name: Install packages
   package:
     name: ['kubeadm', 'kubelet', 'kubectl']
     state: present
