--- a/roles/sysconfig/tasks/main.yml
+++ b/roles/sysconfig/tasks/main.yml
@@ -30,9 +30,13 @@
     mode: '0644'
     backup: yes
 
+#Flush all iptables manually if needed:
+#iptables-save | awk '/^[*]/ { print $1 }
+#                     /^:[A-Z]+ [^-]/ { print $1 " ACCEPT" ; }
+#                     /COMMIT/ { print $0; }' | iptables-restore; iptables-save;
+
 #- name: Firststart ufw
-  #temp samba
-#  shell: ufw allow ssh; ufw allow ntp; ufw allow samba; ufw enable
+#  shell: ufw allow ssh; ufw allow ntp; ufw enable
 
 - name: Start and enable
   service:
