--- a/site.yml
+++ b/site.yml
@@ -1,3 +1,3 @@
 ---
-- import_playbook: hosts-debian-install.yml
-- import_playbook: hosts-debian.yml
+- import_playbook: playbook-firstinstall.yml
+- import_playbook: playbook-raspbian.yml
