--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -4,9 +4,14 @@
     name: ['apt-transport-https', 'ca-certificates', 'software-properties-common']
     state: latest
 
+- name: Set ansible_architecture_altname as amd64 if ansible_architecture is x86_64
+  set_fact:
+    ansible_architecture_altname: "amd64"
+  when: ansible_architecture == "x86_64"
+
 - name: Create repo
   apt_repository:
-    repo: "deb https://download.docker.com/linux/debian {{ ansible_distribution_release }} stable"
+    repo: "deb [arch={{ ansible_architecture_altname }}] https://download.docker.com/linux/debian {{ ansible_distribution_release }} stable"
     state: present
     filename: docker
     update_cache: yes
